# owlv2-detect

./: .gitignore  README.md  main.py  pyproject.toml
commands/: __init__.py  black_marks.py  common.py  general.py
